# tree-sitter-nextflow

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  renovate.json  setup.py  tree-sitter.json
bindings/c/: tree-sitter-nextflow.h  tree-sitter-nextflow.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nextflow/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNextflowTests/: TreeSitterNextflowTests.swift
examples/: hello.nf
src/: grammar.json  node-types.json  parser.c
test/corpus/: advanced_channels.txt  advanced_process.txt  advanced_strings.txt  basic_declarations.txt  binary_expressions.txt  channel_operations.txt  closures.txt  comments.txt  configuration.txt  control_structures.txt  data_structures.txt  declarations.txt  dsl2_features.txt  error_handling.txt  functions_and_methods.txt  hello.txt  operators_and_functions.txt  process_definition.txt  string_interpolation.txt  variable_declarations.txt  workflow_definition.txt
test/highlight/: sublime.nf
