[package]
name = "tree-sitter-nextflow"
description = "Nextflow grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "Nextflow"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/edmundmiller/tree-sitter-nextflow"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "=0.22.2"

[build-dependencies]
cc = "=1.0.99"
